# Turmult

./: .envrc  .gitignore  .projections.json  CHANGELOG.md  Discord.cabal  README.md  Turmult.cabal  default.nix  package.yaml
docs/: Discord-Exceptions.html  Discord-Gateway-Exceptions.html  Discord-Gateway-Types-Messages.html  Discord-Gateway-Types.html  Discord-Gateway.html  Discord-Types-Classes.html  Discord-Types-Data.html  Discord-Types-Lens.html  Discord-Types.html  Discord.html  Prelude.html  Turmult-Exceptions.html  Turmult-Gateway-Exceptions.html  Turmult-Gateway-Types-Messages.html  Turmult-Gateway-Types.html  Turmult-Gateway.html  Turmult-Types-Classes.html  Turmult-Types-Data.html  Turmult-Types-Lens.html  Turmult-Types.html  Turmult.html  doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-63.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  (+25 more)
src/: Discord.hs  Turmult.hs
src/Discord/: Exceptions.hs  Gateway.hs  Types.hs
src/Discord/Gateway/: Exceptions.hs  Types.hs
src/Discord/Gateway/Types/: Messages.hs
src/Discord/Types/: Classes.hs  Data.hs  Lens.hs
src/Turmult/: Exceptions.hs  Gateway.hs  Types.hs
src/Turmult/Gateway/: Exceptions.hs  Types.hs
src/Turmult/Gateway/Types/: Messages.hs
src/Turmult/Types/: Classes.hs  Data.hs  Lens.hs
