cabal-version:       2.4
name:                Discord
version:             0.0.0.0
synopsis:            Discord Library
description:         Discord Library
homepage:            https://github.com/Reyu/Discord
bug-reports:         https://github.com/Reyu/Discord/issues
license:             MIT
license-file:        LICENSE
author:              Reyu Zenfold
maintainer:          Reyu Zenfold <reyu@reyuzenfold.com>
copyright:           2021 Reyu Zenfold
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/Reyu/Discord.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Discord

test-suite Discord-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Discord
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark Discord-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , Discord
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
